cmake_minimum_required(VERSION 3.5)
project(Syft4Fond)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")


set(CMAKE_MODULE_PATH
    "${CMAKE_MODULE_PATH}"
    "${CMAKE_ROOT_DIR}/cmake/Modules"
    "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
  
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

find_package(cudd REQUIRED)
find_package(mona REQUIRED)
find_package(spot REQUIRED)

set(LYDIA_DIR ${PROJECT_SOURCE_DIR}/submodules/lydia)

# Disable Lydia tests/benchmarks
set(LYDIA_ENABLE_TESTS OFF CACHE BOOL "Disable Lydia tests" FORCE)
set(LYDIA_ENABLE_APP OFF CACHE BOOL "Disable Lydia CLI" FORCE)
set(LYDIA_ENABLE_BENCHMARK OFF CACHE BOOL "Disable Lydia benchmarks" FORCE)
add_subdirectory(${LYDIA_DIR})
set(LYDIA_LIBRARIES ${LYDIA_DIR})

#set(COMPOSITIONAL_SYN_DIR ${PROJECT_SOURCE_DIR}/submodules/compositional_syn)
#add_subdirectory(${COMPOSITIONAL_SYN_DIR})
  
set(LYDIA_INCLUDE_DIR ${LYDIA_DIR}/lib/include)
set(LYDIA_THIRD_PARTY_INCLUDE_PATH
    "${LYDIA_DIR}/third_party/spdlog/include;"
    "${LYDIA_DIR}/third_party/CLI11/include;"
    "/usr/local/include;"
    "/opt/homebrew/include;"
    "${LYDIA_DIR}/third_party/google/benchmark/include;"
    "/usr/include")

set(EXT_LIBRARIES_PATH lydia ${CUDD_LIBRARIES} ${MONA_DFA_LIBRARIES} ${MONA_BDD_LIBRARIES} ${MONA_MEM_LIBRARIES})
set(EXT_INCLUDE_PATH ${LYDIA_INCLUDE_DIR} ${LYDIA_THIRD_PARTY_INCLUDE_PATH} ${CUDD_INCLUDE_DIRS} ${MONA_MEM_INCLUDE_DIRS} ${MONA_BDD_INCLUDE_DIRS} ${MONA_DFA_INCLUDE_DIRS})

message(STATUS EXT_LIBRARIES_PATH ${EXT_LIBRARIES_PATH})
add_subdirectory(src)
